[[bin]]
name = 'land-chain'
path = 'src/main.rs'

[profile.release]
panic = 'unwind'

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'node-template'
version = '0.9.0'

[build-dependencies]
vergen = '3'

[dependencies]
error-chain = "0.12"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.7.1"
hex-literal = "0.1"
parity-codec = "3.3"
trie-root = "0.12.2"

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.node-template-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'
