[features]
default = ['std']
std = [
    'parity-codec/std',
    'primitives/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'executive/std',
    'aura/std',
    'indices/std',
    'primitives/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde_derive',
    'serde',
    'safe-mix/std',
    'consensus-aura/std',
    'offchain-primitives/std',
    "consensus_authorities/std",
    "sdr/std"
]
[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.consensus_authorities]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-authorities'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.consensus]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-consensus'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.2'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
optional = true
version = '1.0'

[dependencies.serde_derive]
optional = true
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = 'ba16f60be235d863781d20fdbd60bba8b93a6112'

[dependencies.erc721]
path = "../srml/erc721"
default-features = false

[dependencies.sdr]
path = "../srml/sdr"
default-features = false

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'node-template-runtime'
version = '0.9.0'
