[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'node-template-runtime-wasm'
version = '0.9.0'

[workspace]
members = []


[lib]
name = "node_runtime"
crate-type = ['cdylib']

[dependencies.node-template-runtime]
default-features = false
path = '..'

[features]
default = []
std = [
	"node-template-runtime/std",
]

[profile.release]
lto = true
panic = 'abort'
